[metadata]
name = geostates
version = 0.1.1
author = geostates
description = A package for plotting choropleth maps
long_description = README.md
long_description_content_type = text/markdown
URL = https://github.com/eolesinski/geostates
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved ::  MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = geostates
packages = find:
python_requires = >=3.6

[options.packages.find]
where = geostates
