[metadata]
name = geostates
author = geostates
author_email = eolesinski@nevada.unr.edu
description = A package for plotting choropleth maps
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eolesinski/geostates
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires = 
    numpy
    pandas
    geopandas
    matplotlib
python_requires = >=3.6
